feat: sync all vault content — 30 debug runbooks, JS/TS section, 180+ failure cases, learning path updates
Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>